--- a/2022.03.31.FirstDaysUPDATED/beginDrawing/2.00.betterDotsAndLines.html
+++ b/2022.03.31.FirstDaysUPDATED/beginDrawing/2.00.betterDotsAndLines.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <title>Draw Dots & Lines</title>
   </head>
-	Our first use of a VBO! </br>
-	Each vertex has just 1 attribute: position(x,y,z,w).</br>
-	?Can you add more points to this drawing ? </br>
-	?Can you change the size of the points? </br>
-	?Can you add a ‘a_color’ attribute (R,G,B,A), </br>
-	?    so that each point can have a different color? </br>
-	?Can you add a ‘uniform’ so that line colors are different from points? </br>
+  Our first use of a VBO! </br>
+  <h2 style="color: red">
+      This is a cube's view of projection from the top!!!</br>
+      It's not simply a square!!!</br>
+  </h2>
+  There are 8 vertexes and 12 lines described by 24 vertices, drawn in LINES mode</br>
+  Check my code in js file for details please</br>
 
   <body onload="main()">
     <canvas id="webgl" width="470" height="470">
