--- a/projectA/index.html
+++ b/projectA/index.html
@@ -11,10 +11,11 @@
 </canvas>
 <br>
 <p>
+    Drag mouse to change aspect <br>
     press "up" to speed up the plane, press "down" to slow down the plane <br>
     <span id='Speed'  > Speed:    </span> <br>
-    <input type="button" id="A0button" onclick="A0_runStop()" value="Angle 0 ON">
-    <input type="button" id="A1button" onclick="A1_runStop()" value="Angle 1 ON">
+    <input type="button" id="A0button" onclick="A0_runStop()" value="Radar panel ON">
+    <input type="button" id="A1button" onclick="A1_runStop()" value="Radar frame ON">
 </p>
 <script src="lib/webgl-utils.js"></script>
 <script src="lib/webgl-debug.js"></script>
