--- a/projectA/index.html
+++ b/projectA/index.html
@@ -32,5 +32,10 @@
 <script src="lib/cuon-utils.js"></script>
 <script src="lib/cuon-matrix-quat03.js"></script>
 <script src="main.js"></script>
+<script src="plane_body.js"></script>
+<script src="plane_paddle.js"></script>
+<script src="radar_base.js"></script>
+<script src="radar_frame.js"></script>
+
 </body>
 </html>
