--- a/projectB/index.html
+++ b/projectB/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body onload="main()">
-<canvas id="webgl" width="800" height="800">
+<canvas id="webgl">
     Please use a browser that supports "canvas"
 </canvas>
 <br>
