--- a/projectB/index.html
+++ b/projectB/index.html
@@ -11,8 +11,9 @@
 </canvas>
 <br>
 <p>
-    Drag mouse to change aspect <br>
-    press "up" to speed up the plane, press "down" to slow down the plane <br>
+    <span style="color: red">Use "WASD" to move the camera and use arrows to change the lookAt direction </span><br>
+    Drag mouse to rotate the radar <br>
+    press "X" to speed up the plane, press "Z" to slow down the plane <br>
     <span id='Speed'> Speed:    </span> <br>
     <label>
         Radar Range:
@@ -36,6 +37,11 @@
 <script src="plane_paddle.js"></script>
 <script src="radar_base.js"></script>
 <script src="radar_frame.js"></script>
+<script src="radar_panel.js"></script>
+<script src="cord.js"></script>
+<script src="cylinder.js"></script>
+<script src="sphere.js"></script>
+<script src="grid.js"></script>
 
 </body>
 </html>
