--- a/projectB/index.html
+++ b/projectB/index.html
@@ -11,7 +11,11 @@
 </canvas>
 <br>
 <p>
-    <span style="color: red">Use "WASD" to move the camera and use arrows to change the lookAt direction </span><br>
+    <span style="color: red">
+        Use "WASD" to move the camera and use arrows to change the lookAt direction <br>
+        ("W" "S" to move forward/back forward and "A" "D" to move horizontally) <br>
+        ("↑↓" for pitch and "←→" for strafe)<br>
+    </span>
     Drag mouse to rotate the radar <br>
     press "X" to speed up the plane, press "Z" to slow down the plane <br>
     <span id='Speed'> Speed:    </span> <br>
