--- a/activity4/ch07_class/7.14jt.BasicShapesCam.html
+++ b/activity4/ch07_class/7.14jt.BasicShapesCam.html
@@ -18,17 +18,17 @@
 	<div id= ShapeName></div> 
 	<!-- Fill this HTML tag with JavaScript-generated text that names the shape displayed
 	To change shapes, users press the 'Next' button, which calls the 'nextShape()' function-->
-	Displayed Shape: 
+	<span style="color: red">Use buttons below to control the shivering speed <br></span>
 	<!--
-	-->	<button type="button" onClick='nextShape()'>Next</button><BR> 
+	-->
 
 		<!--BUTTONS: commands below create HTML push-buttons with labels
 			Spin <<, runStop, and Spin >>.  
 		When users click the button, HTML calls JavaScript functions
 			"spinDown()", "runStop()" and "spinUp()"   -->
-      <button type="button" onclick="spinDown()">Spin << </button>
+      <button type="button" onclick="shiveringDown()">shivering << </button>
 	  <button type="button" onclick="runStop()">Run/Stop</button>
-      <button type="button" onclick="spinUp()">Spin >> </button>
+      <button type="button" onclick="shiveringUp()">shivering >> </button>
     </p>
 	<!--	Load in the JavaScript libraries supplied by our textbook 
 			(Matsuda et al., 2013 WebGL Programming Guide) that help us
