--- a/projectC/JT_MultiShader.html
+++ b/projectC/JT_MultiShader.html
@@ -14,15 +14,16 @@
       <button type="button" onclick="VBO1toggle()">VBO-1 hide/show</button>
       <button type="button" onclick="VBO2toggle()">VBO-2 hide/show</button>
     </p>
+    <script src="grid.js"></script>
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
     <script src="lib/cuon-matrix-quat03.js"></script>
-<!-- YOU SHOULD UPGRADE to Brandon Jones' far-faster, 
-      far more complete vector/matrix/quaternion library: (Google it!)
-		<script src="../lib/glmatrix.js"></script>
---> 
-		<script src="JT_VBObox-Lib.js"></script>
+    <!-- YOU SHOULD UPGRADE to Brandon Jones' far-faster,
+          far more complete vector/matrix/quaternion library: (Google it!)
+            <script src="../lib/glmatrix.js"></script>
+    -->
+    <script src="JT_VBObox-Lib.js"></script>
     <script src="JT_MultiShader.js"></script>
   </body>
 </html>
