--- a/projectC/JT_MultiShader.html
+++ b/projectC/JT_MultiShader.html
@@ -15,6 +15,7 @@
       <button type="button" onclick="VBO2toggle()">VBO-2 hide/show</button>
     </p>
     <script src="grid.js"></script>
+    <script src="sphere.js"></script>
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
