--- a/projectC/JT_MultiShader.html
+++ b/projectC/JT_MultiShader.html
@@ -16,6 +16,8 @@
     </p>
     <script src="grid.js"></script>
     <script src="sphere.js"></script>
+    <script src="tetrahedron.js"></script>
+    <script src="cube.js"></script>
     <script src="lights-JT.js"></script>
     <script src="materials_Ayerdi.js"></script>
     <script src="lib/webgl-utils.js"></script>
